--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -2,7 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colorPrimary">#FFFFFFFF</color>
+    <color name="colorPrimary">#FF2b9ad0</color>
     <color name="colorPrimaryDark">#FF000000</color>
     <color name="colorAccent">#FF808080</color>
+    <color name="holo_blue_light">#FF2b9ad0</color>
+    <color name="holo_red_light">#FFFF4444</color>
 </resources>
