--- a/app/app/src/main/res/layout/activity_add_task.xml
+++ b/app/app/src/main/res/layout/activity_add_task.xml
@@ -322,6 +322,27 @@
     <TableRow>
 
         <TextView
+            android:id="@+id/textView_duration"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:text="Duration:"
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/editText_duration"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:inputType="number"
+            android:text=""
+            android:textSize="16sp"/>
+
+    </TableRow>
+
+    <TableRow>
+
+        <TextView
             android:id="@+id/textView_Location"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
