--- a/app/app/src/main/res/drawable/list_view.xml
+++ b/app/app/src/main/res/drawable/list_view.xml
@@ -1,5 +1,13 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:tint="#000000" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
-      
-    <path android:fillColor="@android:color/white" android:pathData="M4,15h16v-2L4,13v2zM4,19h16v-2L4,17v2zM4,11h16L20,9L4,9v2zM4,5v2h16L20,5L4,5z"/>
-    
-</vector>
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="?attr/colorSurface" />
+    <corners android:radius="@dimen/card_corner_radius" />
+    <stroke
+        android:width="@dimen/spacing_micro"
+        android:color="?attr/colorOutline" />
+    <padding
+        android:bottom="@dimen/spacing_small"
+        android:left="@dimen/spacing_small"
+        android:right="@dimen/spacing_small"
+        android:top="@dimen/spacing_small" />
+</shape>
