--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -28,4 +28,17 @@
     <color name="statusSuccess">#FF43A047</color>
     <color name="statusWarning">#FFFFB300</color>
     <color name="statusError">#FFE53935</color>
+
+    <!-- Chip Colors -->
+    <color name="chip_background_color">@color/white</color>
+    <color name="chip_background_selected">#E8F0FE</color>
+    <color name="chip_stroke_color">#1A73E8</color>
+    <color name="chip_text_color">#1A73E8</color>
+    <color name="chip_text_color_selected">#FFFFFF</color>
+    <color name="chip_ripple_color">#331A73E8</color>
+
+    <!-- Task Priority Colors -->
+    <color name="priority_high">#FFE57373</color>
+    <color name="priority_medium">#FFFFD54F</color>
+    <color name="priority_low">#FF81C784</color>
 </resources>
